Home Side Carousel fixes / header overflow fix

--- a/app/assets/stylesheets/z-style-andrew.css
+++ b/app/assets/stylesheets/z-style-andrew.css
@@ -427,8 +427,7 @@ ul.home-side-carousel li img {
 }
 
 ul.home-side-carousel li div {
-	margin-left:5px;
-	padding:5px 0;
+	padding: 10px 5px 10px 0;
 }
 
 .list-group-item img {
@@ -717,3 +716,37 @@ body {
 	right:-250px;
 	
 }
+
+/* 
+
+------------------------
+-- Home side Carousel --
+------------------------
+*/
+
+.home-carousel .bx-wrapper {
+	padding: 5px 7px;
+}
+
+.home-carousel .home-side-carousel li {
+	width:auto !important;
+	margin:6px 0 !important;
+	padding:6px 7px;
+	border-bottom:1px solid #ececec;
+	height:80px;
+	clear:left;
+}
+
+.home-carousel li img.pull-left.show-episode-image {
+	margin:0 10px 0 0 !important;
+	border:none !important;
+	border-radius:0 !important;
+	padding:0 !important;
+}
+
+.home-carousel li a.list-group-item {
+	border-radius:0 !important;
+	padding:0 !important;
+	margin:0 !important;
+}
+
